--- a/FoodDelivery/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FoodDelivery/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,51 +4,50 @@
     ViewData["Title"] = "Register";
 }
 
-<h1 class="d-flex justify-content-center">@ViewData["Title"]</h1>
-
 <div class="row d-flex justify-content-center">
     <div class="col-md-6 d-flex justify-content-center bg-form-reister-container">
         <div class="col-md-10">
             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <h2 class="text-center">Create a new account</h2>
-                <hr />
+                <h1 class="d-flex justify-content-center topic-register">@ViewData["Title"]</h1>
+                <h2 class="text-center topic-form">Create a new account</h2>
+
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.FirstName" class="form-control" autocomplete="off" aria-required="true" placeholder="Name" />
+                    <input asp-for="Input.FirstName" class="form-control form-input" autocomplete="off" aria-required="true" placeholder="Name" />
                     <label asp-for="Input.FirstName">Name</label>
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.LastName" class="form-control" autocomplete="off" aria-required="true" placeholder="Surname" />
+                    <input asp-for="Input.LastName" class="form-control form-input" autocomplete="off" aria-required="true" placeholder="Surname" />
                     <label asp-for="Input.LastName">Surname</label>
                     <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <input asp-for="Input.Email" class="form-control form-input" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                     <label asp-for="Input.Email">Email</label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="off" aria-required="true" placeholder="Phone" />
+                    <input asp-for="Input.PhoneNumber" class="form-control form-input" autocomplete="off" aria-required="true" placeholder="Phone" />
                     <label asp-for="Input.PhoneNumber">Phone</label>
                     <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <input asp-for="Input.Password" class="form-control form-input" autocomplete="new-password" aria-required="true" placeholder="password" />
                     <label asp-for="Input.Password">Password</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <input asp-for="Input.ConfirmPassword" class="form-control form-input" autocomplete="new-password" aria-required="true" placeholder="password" />
                     <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
-                <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+                <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary btn-register">Register</button>
             </form>
         </div>
     </div>
