--- a/FoodDelivery/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - FoodDelivery</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/register_login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FoodDelivery.styles.css" asp-append-version="true" />
 </head>
 <body>
