--- a/FoodDelivery/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="category" asp-action="Index">CategoryEdit</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="fooditem" asp-action="Index">FoodEdit</a>
+                        </li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
