--- a/FoodDelivery/Views/FoodItem/Index.cshtml
+++ b/FoodDelivery/Views/FoodItem/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.MenuId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CategoryId)
+                @Html.DisplayNameFor(model => model.CategoryTitle)
             </th>
             <th></th>
         </tr>
@@ -64,12 +64,12 @@
                 @Html.DisplayFor(modelItem => item.MenuId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CategoryId)
+                @Html.DisplayFor(modelItem => item.CategoryTitle)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
