--- a/FoodDelivery/Views/FoodItem/Index.cshtml
+++ b/FoodDelivery/Views/FoodItem/Index.cshtml
@@ -73,7 +73,7 @@
 </table>
 
 <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
+    <ul class="pagination pagination-sm justify-content-center">
         @if (Model.HasPreviousPage)
         {
             <li class="page-item">
