ADD DbInitializer Admin area, fix IdentityRole and route

--- a/FoodDelivery/Areas/Admin/Views/Category/Delete.cshtml
+++ b/FoodDelivery/Areas/Admin/Views/Category/Delete.cshtml
@@ -1,4 +1,7 @@
 ﻿@model FoodDelivery.Models.CategoryViewModel
+@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+}
 
 @{
     ViewData["Title"] = "Delete";
