--- a/FoodDelivery/Areas/Admin/Views/Category/Index.cshtml
+++ b/FoodDelivery/Areas/Admin/Views/Category/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@using FoodDelivery.Utilities
 @model PaginatedList<FoodDelivery.Models.CategoryViewModel>
+@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+}
+
 
 @{
     ViewData["Title"] = "Index";
