--- a/FoodDelivery/Areas/Admin/Views/FoodItem/Edit.cshtml
+++ b/FoodDelivery/Areas/Admin/Views/FoodItem/Edit.cshtml
@@ -1,4 +1,7 @@
 ﻿@model FoodDelivery.ViewModel.FoodItemViewModel
+@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+}
 
 @{
     ViewData["Title"] = "Edit";
