--- a/FoodDelivery/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="category" asp-action="Index">CategoryEdit</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="category" asp-action="Index">CategoryEdit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="fooditem" asp-action="Index">FoodEdit</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="fooditem" asp-action="Index">FoodEdit</a>
                         </li>
 
                     </ul>
