--- a/FoodDelivery/Areas/Admin/Views/Category/Edit.cshtml
+++ b/FoodDelivery/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,15 +1,19 @@
 ﻿@model FoodDelivery.Models.CategoryViewModel
+@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+}
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <h1>@ViewData["Title"]</h1>
 
+<h4>CategoryViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -17,7 +21,7 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
