--- a/FoodDelivery/Areas/Admin/Views/FoodItem/Index.cshtml
+++ b/FoodDelivery/Areas/Admin/Views/FoodItem/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@using FoodDelivery.Utilities
 @model PaginatedList<FoodDelivery.ViewModel.FoodItemViewModel>
+@{
+    Layout = "/Views/Shared/_Layout.cshtml";
+}
 
 @{
     ViewData["Title"] = "Index";
