--- a/FoodDelivery/Views/Category/Index.cshtml
+++ b/FoodDelivery/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FoodDelivery.Utilities
 @model PaginatedList<FoodDelivery.Models.CategoryViewModel>
 @{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
