--- a/FoodDelivery/Views/FoodItem/Index.cshtml
+++ b/FoodDelivery/Views/FoodItem/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FoodDelivery.Utilities
 @model PaginatedList<FoodDelivery.ViewModel.FoodItemViewModel>
 @{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 @{
