--- a/FoodDelivery/Views/Category/Create.cshtml
+++ b/FoodDelivery/Views/Category/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FoodDelivery.Models.CategoryViewModel
 @{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
