--- a/FoodDelivery/Views/FoodItem/Delete.cshtml
+++ b/FoodDelivery/Views/FoodItem/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FoodDelivery.ViewModel.FoodItemViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h1>Delete</h1>
