--- a/FoodDelivery/Views/FoodItem/Edit.cshtml
+++ b/FoodDelivery/Views/FoodItem/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FoodDelivery.ViewModel.FoodItemViewModel
 @{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 @{
