--- a/FoodDelivery/Views/Home/Index.cshtml
+++ b/FoodDelivery/Views/Home/Index.cshtml
@@ -5,14 +5,26 @@
 <div class="modal fade modal-bg h-100" id="foodItemModal" tabindex="-1" role="dialog" aria-labelledby="foodItemModalLabel" aria-hidden="true">
     <div class="modal-dialog h-100" role="document">
         <div class="modal-content modal-place">
-            <img id="modalFoodItemImage" src="#" class="card-img-top image-container modal-image" alt="Food Item Image" style="height: 200px; object-fit: cover;">
+            <img id="modalFoodItemImage" src="#" class="card-img-top image-container modal-image" alt="Food Item Image" style="height: 250px; object-fit: cover;">
             <div class="modal-body font-popins">
                 <!-- Зміст модального вікна тут -->
                 <h5 id="modalFoodItemName" class="m-0 fw-600 fs-5"></h5>
                 <p id="modalFoodItemCategory" class="mb-3 font-popins fw-light text-muted"></p>
                 <p id="modelFoodDescription" class="mb-3 font-popins fw-lighter fs-7"></p>
-                <p id="modalFoodItemPrice" class="m-0 fw-normal fs-6"></p>
-
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex align-items-center">
+                        <img class="me-2" src="svg/price.svg" />
+                        <p id="modalFoodItemPrice" class="card-text font-popins fw-medium fs-6"></p>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <img class="me-2" src="svg/weight.svg" />
+                        <p id="modalFoodItemWeight" class="card-text font-popins fw-medium fs-6">250 g</p>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <img class="me-2" src="svg/timeToReady.svg" />
+                        <p id="modalFoodItemTime" class="card-text font-popins fw-medium fs-6">25 Mins</p>
+                    </div>
+                </div>
             </div>
             <a href="#" class="btn btn-primary btn-register card-btn-container w-100 btn-model">Add to cart</a>
         </div>
@@ -22,10 +34,10 @@
 
 <div class="mt-4 container">
     <div class="mt-4 mb-2">
-        <a href="@Url.Action("Index", new { category = "All", page = Model.CurrentPage, pageSize = Model.PageSize })" class="btn btn-outline-primary mr-2 @(ViewBag.Category == null || ViewBag.Category == "All" ? "active" : "")">All</a>
+        <a href="@Url.Action("Index", new { category = "All", page = Model.CurrentPage, pageSize = Model.PageSize })" class="btn btn-outline-primary rounded-pill pt-1 pb-1 ps-4 pe-4 @(ViewBag.Category == null || ViewBag.Category == "All" ? "active" : "")">All</a>
         @foreach (var category in ViewBag.Categories)
         {
-            <a href="@Url.Action("Index", new { category = category.Title, page =  /*Model.CurrentPage*/1, pageSize = Model.PageSize })" class="btn btn-outline-primary mr-2 @(ViewBag.Category == category.Title ? "active" : "")">@category.Title</a>
+            <a href="@Url.Action("Index", new { category = category.Title, page =  /*Model.CurrentPage*/1, pageSize = Model.PageSize })" class="btn btn-outline-primary rounded-pill pt-1 pb-1 ps-4 pe-4  @(ViewBag.Category == category.Title ? "active" : "")">@category.Title</a>
         }
     </div>
 
@@ -35,12 +47,18 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100 card-container" data-toggle="modal" data-target="#foodItemModal" onclick="openFoodItemModal('@item.Name', '@item.CategoryName', '@item.Price', '@item.ImageUrl', '@item.Description')">
                     <img src="@Url.Content(item.ImageUrl)" class="card-img-top image-container" alt="Food Item Image" style="height: 200px; object-fit: cover;">
-                    <div class="card-body col-md-12">
-                        <div class="col-md-12 mb-3">
-                            <h5 class="card-title m-0 font-popins fw-600 fs-5">@item.Name</h5>
-                            <p class="card-text text-muted m-0 font-popins fw-light fs-8">@item.CategoryName</p>
+                    <div class="row card-body col-md-12 m-0 px-2">
+                        <div class="col">
+                            <h5 class="card-title m-0 font-popins fs-5">@item.Name</h5>
+                            <p class="card-text text-muted font-popins fw-light fs-8 mb-3">@item.CategoryName</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="card-text font-popins fw-medium fs-6 m-0"><img src="svg/price.svg" class="me-2" />$@item.Price</p>
+                                <p class="card-text font-popins fw-medium fs-6 m-0"><img src="svg/timeToReady.svg" class="me-2" /> 25 Mins<!-- item.TimeToReady --></p>
+                            </div>
                         </div>
-                        <p class="card-text font-popins fw-normal fs-6">@item.Price $</p>
+                        <!-- <div class="col d-flex justify-content-end align-items-start pe-0">
+                            <a href="#" class="btn btn-primary btn-register card-btn-container w-10 rounded-3"><img src="/svg/ura7w7ccyaplozr9d0a.svg" class="" /></a>
+                        </div> -->
                     </div>
                     <!-- <a href="#" class="btn btn-primary btn-register card-btn-container w-100">Buy</a> -->
                 </div>
@@ -54,25 +72,25 @@
         <ul class="pagination justify-content-center">
             @if (Model.HasPreviousPage)
             {
-                <li class="page-item">
-                    <a class="page-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = Model.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
+                <li class="page-item pagination-bg">
+                    <a class="page-link pagination-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = Model.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
+                        <span aria-hidden="true" class="pagination-link fw-medium fs-6">&laquo;</span>
                     </a>
                 </li>
             }
 
             @for (int i = 1; i <= Model.TotalPages; i++)
             {
-                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                    <a class="page-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = i, pageSize = Model.PageSize })">@i</a>
+                <li class="page-item pagination-bg @(i == Model.CurrentPage ? "active" : "")">
+                    <a class="page-link pagination-link fs-6" href="@Url.Action("Index", new { category = ViewBag.Category, page = i, pageSize = Model.PageSize })">@i</a>
                 </li>
             }
 
             @if (Model.HasNextPage)
             {
-                <li class="page-item">
-                    <a class="page-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = Model.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
+                <li class="page-item pagination-bg">
+                    <a class="page-link pagination-link" href="@Url.Action("Index", new { category = ViewBag.Category, page = Model.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
+                        <span aria-hidden="true" class="pagination-link fw-medium fs-6">&raquo;</span>
                     </a>
                 </li>
             }
