--- a/FoodDelivery/Views/FoodItem/Create.cshtml
+++ b/FoodDelivery/Views/FoodItem/Create.cshtml
@@ -26,9 +26,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" />
-                <span asp-validation-for="Amount" class="text-danger"></span>
+                <label asp-for="TimeToReady" class="control-label"></label>
+                <input asp-for="TimeToReady" class="form-control" />
+                <span asp-validation-for="TimeToReady" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Weight" class="control-label"></label>
+                <input asp-for="Weight" class="form-control" />
+                <span asp-validation-for="Weight" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
