--- a/FoodDelivery/Views/Cart/Index.cshtml
+++ b/FoodDelivery/Views/Cart/Index.cshtml
@@ -53,7 +53,7 @@
             </tbody>
         </table>
         <div>
-            <a asp-controller="Checkout" asp-action="Index" class="btn btn-warning">Checkout</a>
+            <a onclick="checkout()" class="btn btn-warning">Checkout</a>
         </div>
     }
     else
