--- a/FoodDelivery/Views/Cart/Index.cshtml
+++ b/FoodDelivery/Views/Cart/Index.cshtml
@@ -46,7 +46,10 @@
                             @Html.DisplayFor(modelItem => item.OrderItemTotal)
                         </td>
                         <td>
-                            <button class="btn btn-danger" onclick="deleteCartItem(@item.OrderItemId)">Delete</button>
+                            <form method="post" action="@Url.Action("Delete", "Cart", new { id = item.OrderItemId })">
+                                @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
                         </td>
                     </tr>
                 }
