--- a/FoodDelivery/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FoodDelivery/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model CourierRegisterModel
+@model RegisterModel
 @{
-    ViewData["Title"] = "Courier Register";
+    ViewData["Title"] = "Register";
 }
 
 <div class="row d-flex justify-content-center">
