--- a/FoodDelivery/Views/Shared/_AdminLayout.cshtml
+++ b/FoodDelivery/Views/Shared/_AdminLayout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-primary" asp-controller="Home" asp-action="Index">Go to home page</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <partial name="_AdminLoginPartial" />
                 </div>
             </div>
         </nav>
