--- a/FoodDelivery/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FoodDelivery/Areas/Identity/Pages/Account/Register.cshtml
@@ -38,6 +38,24 @@
                 </div>
 
                 <div class="form-floating mb-3">
+                    <input asp-for="Input.City" class="form-control form-input" autocomplete="off" aria-required="true" placeholder="City" />
+                    <label asp-for="Input.City">City</label>
+                    <span asp-validation-for="Input.City" class="text-danger"></span>
+                </div>
+
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.Street" class="form-control form-input" autocomplete="off" aria-required="true" placeholder="Street" />
+                    <label asp-for="Input.Street">Street</label>
+                    <span asp-validation-for="Input.Street" class="text-danger"></span>
+                </div>
+
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.StreetNumber" class="form-control form-input" autocomplete="off" aria-required="true" placeholder="StreetNumber" />
+                    <label asp-for="Input.StreetNumber">Street Number</label>
+                    <span asp-validation-for="Input.StreetNumber" class="text-danger"></span>
+                </div>
+
+                <div class="form-floating mb-3">
                     <input asp-for="Input.Password" class="form-control form-input" autocomplete="new-password" aria-required="true" placeholder="password" />
                     <label asp-for="Input.Password">Password</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
