--- a/FoodDelivery/Views/Home/Index.cshtml
+++ b/FoodDelivery/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <!-- Модальне вікно Details -->
 <div class="modal fade modal-bg h-100" id="foodItemModal" tabindex="-1" role="dialog" aria-labelledby="foodItemModalLabel" aria-hidden="true">
     <div class="modal-dialog h-100" role="document">
-        <div class="modal-content modal-place">
+        <div class="modal-content modal-place modal-place-btn">
             <img id="modalFoodItemImage" src="#" class="card-img-top image-container modal-image" alt="Food Item Image" style="height: 250px; object-fit: cover;">
             <div class="modal-body font-popins">
                 <!-- Зміст модального вікна тут -->
@@ -32,6 +32,11 @@
     </div>
 </div>
 
+<!--Message about unauthorized user-->
+
+<div class="modal-place-warning">
+    <h2 class="text-light fs-5 text-center">Please register to place an order</h2>
+</div>
 
 <div class="mt-4 container">
     <div class="mt-4 mb-2">
