--- a/FoodDelivery/Views/Cart/Index.cshtml
+++ b/FoodDelivery/Views/Cart/Index.cshtml
@@ -5,68 +5,68 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cart</h1>
 
-<div class="container">
-
-    @if (Model.Any())
-    {
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.OrderItemId)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FoodItemName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Amount)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.OrderItemTotal)
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
+<div class="container d-flex align-items-center justify-content-center">
+    <div class="w-50">
+        <h1>Cart</h1>
+        @if (Model.Any())
+        {
+            <table class="table">
+                <thead>
                     <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.OrderItemId)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FoodItemName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Amount)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.OrderItemTotal)
-                        </td>
-                        <td>
-                            <form method="post" action="@Url.Action("Delete", "Cart", new { id = item.OrderItemId })">
-                                @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
-                                <button type="submit" class="btn btn-danger">Delete</button>
-                            </form>
-                        </td>
+                        <th>
+                            @Html.DisplayNameFor(model => model.OrderItemId)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FoodItemName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Amount)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.OrderItemTotal)
+                        </th>
+                        <th></th>
                     </tr>
-                }
-            </tbody>
-        </table>
-        <form method="post" action="@Url.Action("Checkout", "Cart")">
-            @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
-            <button type="submit" class="btn btn-warning">Checkout</button>
-        </form>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OrderItemId)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FoodItemName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Amount)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OrderItemTotal)
+                            </td>
+                            <td>
+                                <form method="post" action="@Url.Action("Delete", "Cart", new { id = item.OrderItemId })">
+                                    @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <form method="post" action="@Url.Action("Checkout", "Cart")">
+                @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
+                <button type="submit" class="btn btn-warning">Checkout</button>
+            </form>
 
-    }
-    else
-    {
-        <div class="alert alert-warning text-center p-4" role="alert">
-            Your shopping cart is empty.
-        </div>
-    }
-
+        }
+        else
+        {
+            <div class="alert alert-warning text-center p-4" role="alert">
+                Your shopping cart is empty.
+            </div>
+        }
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
