--- a/FoodDelivery/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery/Views/Shared/_Layout.cshtml
@@ -46,6 +46,10 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+        <!-- jQuery Unobtrusive Validation -->
+    <script src="https://cdn.jsdelivr.net/jquery.validation.unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
