--- a/FoodDelivery/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/FoodDelivery/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -13,12 +13,14 @@
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary btn-register" type="submit">Download</button>
-        </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+        <div class="d-flex align-items-center">
+            <form id="download-data" asp-page="DownloadPersonalData" method="post">
+                <button class="btn btn-primary btn-register" type="submit">Download</button>
+            </form>
+            <div class="d-flex justify-content-center align-items-center ms-2">
+                <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            </div>
+        </div>
     </div>
 </div>
 
